--- a/index.html
+++ b/index.html
@@ -1,34 +1,46 @@
-This is a <strong>great</strong> website!
-Those kitties are <em>sooo</em> cute.
-<p>This is a paragraph.</p>
-<p>Here's another paragraph.</p>
-<h1>Hello</h1>
-<h2>Hello</h2>
-<h3>Hello</h3>
-<h4>Hello</h4>
-<h5>Hello</h5>
-<h6>Hello</h6>
-<h4>Pronouncing rhinoceros</h4>
-<p>
-  In the word <strong>rhinoceros</strong>,
-  the emphasis should be on the second syllable, like
-  <strong>
-    rhi<em>no</em>ceros
-  </strong>.
-</p>
-<ol>
-  <li>ordered</li>
-  <li>list</li>
-  <li>items</li>
-</ol>
-<ul>
-  <li>unordered</li>
-  <li>list</li>
-  <li>items</li>
-</ul>
-Here's a link to
-<a href="https://google.com/" target="_blank">Google</a>.
-<img src="http://i.imgur.com/Vfyr1aB.jpg" alt="Cat picture">
-<a href="https://i.imgur.com/Vfyr1aB.jpg" target="_blank">
-  <img src="https://i.imgur.com/Vfyr1aB.jpg" alt="Cat picture">
-</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css
+">
+    <meta charset="utf-8">
+    <title>Index Practice</title>
+  </head>
+  <body>
+    This is a <strong>great</strong> website!
+    Those kitties are <em>sooo</em> cute.
+    <p>This is a paragraph.</p>
+    <p>Here's another paragraph.</p>
+    <h1>Hello</h1>
+    <h2>Hello</h2>
+    <h3>Hello</h3>
+    <h4>Hello</h4>
+    <h5>Hello</h5>
+    <h6>Hello</h6>
+    <h4>Pronouncing rhinoceros</h4>
+    <p>
+      In the word <strong>rhinoceros</strong>,
+      the emphasis should be on the second syllable, like
+      <strong>
+        rhi<em>no</em>ceros
+      </strong>.
+    </p>
+    <ol>
+      <li>ordered</li>
+      <li>list</li>
+      <li>items</li>
+    </ol>
+    <ul>
+      <li>unordered</li>
+      <li>list</li>
+      <li>items</li>
+    </ul>
+    Here's a link to
+    <a href="https://google.com/" target="_blank">Google</a>.
+    <img src="http://i.imgur.com/Vfyr1aB.jpg" alt="Cat picture">
+    <a href="https://i.imgur.com/Vfyr1aB.jpg" target="_blank">
+      <img src="https://i.imgur.com/Vfyr1aB.jpg" alt="Cat picture">
+    </a>
+
+  </body>
+</html>
